# EasyWakeWord

./: AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LEARNINGS.md  LICENSE  MANIFEST.in  MY-MEMORIES.md  PUBLISHING.md  QUICKSTART.md  README-CODE-ALIGNMENT.md  README.md  mini_transcriber_issue.md  pyproject.toml  test_audio_levels.py  test_ensure_whisper.py  test_internal_transcriber.py  test_live_speech.py  test_playback_and_listen.py  test_transcriber.py
easywakeword/: __init__.py  demo.py  device_utils.py  recogniser.py  silence.py  transcriber.py  transcription.py  wakeword.py
examples/: __init__.py  async_callback.py  basic_sync.py  cloud_whisper.py  device_selection.py  edge_fallback.py  lan_whisper.py  load_balancer.py  multi_stage.py  multiroom_async.py  record_reference.py  sound_poc.py  tune_threshold.py  voice_assistant_pipeline.py
tests/: conftest.py  test_cross_platform.py  test_helpers.py  test_wakeword_basic.py  test_wakeword_simulated.py
