[project]
name = "easywakeword"
version = "0.1.0"
description = "A simple way to do Wake Words in Python"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Raymond Lowe"}
]
requires-python = ">=3.10"
keywords = ["wake word", "speech recognition", "audio", "voice", "whisper"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]
dependencies = [
    "numpy>=1.24.0",
    "sounddevice>=0.4.6",
    "librosa>=0.10.0",
    "scipy>=1.10.0",
    "soundfile>=0.12.0",
    "requests>=2.28.0",
]

[project.urls]
Homepage = "https://github.com/raymondclowe/EasyWakeWord"
Repository = "https://github.com/raymondclowe/EasyWakeWord"
Issues = "https://github.com/raymondclowe/EasyWakeWord/issues"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["easywakeword*"]
